ドロップダウンメニューの修正

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a href="#introduction">教室理念</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#can" class="cantitle">クラス紹介</a>
+                    <a href="#can" class="cantitle">クラス</a>
                     <!-- ドロップダウンメニュー -->
                     <ul class="can">
-                        <li><a href="#can">クラス紹介</a></li>
+                        <li class="headmenu"><a href="#can">クラス紹介</a></li>
                         <li class="headmenu">
                             <a href="/shogaku/shogaku.html">小学生クラス</a>
                         </li>
