--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -19,13 +19,21 @@
         <nav class="headnav">
             <ul class="dropdown">
                 <li class="headmenu">
-                    <a href="/index.html">ホーム</a>
+                    <a href="/index.html" class="cantitle">ホーム</a>
+                    <ul class="can">
+                        <li class="headmenu">
+                            <a href="#achievement">資格</a>
+                        </li>
+                        <li class="headmenu">
+                            <a href="/index.html#greeting">代表挨拶</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="headmenu">
                     <a href="#lesson">Lesson内容</a>
                 </li>
                 <li class="headmenu">
-                    <p class="cantitle">他のクラス</p>
+                    <a href="#" class="cantitle">他のクラス</a>
                     <ul class="can">
                         <li class="headmenu">
                             <a href="/chugaku/chugaku.html">中学生クラス</a>
@@ -37,12 +45,6 @@
                 </li>
                 <li class="headmenu">
                     <a href="#reputation">授業風景</a>
-                </li>
-                <li class="headmenu">
-                    <a href="#achievement">資格</a>
-                </li>
-                <li class="headmenu">
-                    <a href="/index.html#greeting">代表挨拶</a>
                 </li>
                 <li class="headmenu">
                     <a href="#contact">お問い合わせ</a>
