留学サポートの追加

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -22,7 +22,10 @@
                     <a href="/index.html" class="cantitle">ホーム</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="#achievement">資格</a>
+                            <a href="/index.html">TOP</a>
+                        </li>
+                        <li class="headmenu">
+                            <a href="/index.html#abroad">留学</a>
                         </li>
                         <li class="headmenu">
                             <a href="/index.html#greeting">代表挨拶</a>
@@ -44,7 +47,10 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="#reputation">授業風景</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
                     <a href="#contact">お問い合わせ</a>
@@ -77,7 +83,7 @@
                         <a href="/shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#reputation">授業風景</a>
+                        <a href="#reputation">授業風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
@@ -114,6 +120,10 @@
                 <h3>国語クラス</h3>
                 <p>個々のペースに合わせながら<strong>定期テスト対策</strong>と<strong>受験対策</strong>を行います。読解問題を進めると同時に文法問題も解き、どちらも出来るように進めていきます。定期テスト前では学校から配られた「漢字プリント」を全て書けるか確認をしていきます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
             </div>
+        </section>
+        <section class="scenery">
+            <h2 id="reputation">授業風景</h2>
+            <img src="/photo/shogaku1.JPG" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
@@ -170,7 +180,7 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="#reputation">授業風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
