--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方や定期テストや高校受験に向けて学力を向上させたい中学生の方、小学生から大人までの習字を習いたい・綺麗な字を書けるようになりたい方におすすめの英会話教室・学習塾・書道教室を行なっています。阪堺線「石津」駅から徒歩５分の英会話教室・学習塾、南海線「湊」駅から徒歩５分の書道教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
+    <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方や定期テストや高校受験に向けて学力を向上させたい中学生の方、小学生から大人までの習字を習いたい・綺麗な字を書けるようになりたい方におすすめの英会話教室・学習塾・書道教室を行なっています。阪堺線「石津」駅から徒歩5分の英会話教室・学習塾、南海線「湊」駅から徒歩5分の書道教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,石津川,堺,堺市西区,浜寺,大浜,湊,大阪,英会話,英検・英検対策,習字,書道,集団塾・個別指導・学習塾・進学塾・志望校対策・受験対策,小学生,中学生,大人,社会人,おすすめ">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="photo/logo.png">
@@ -23,7 +23,7 @@
                     <a href="#introduction">教室理念</a>
                 </li>
                 <li class="headmenu">
-                    <a href="#can" class="cantitle">クラス</a>
+                    <a href="#can" class="cantitle">クラス紹介</a>
                     <!-- ドロップダウンメニュー -->
                     <ul class="can">
                         <li class="headmenu"><a href="#can">クラス紹介</a></li>
@@ -40,6 +40,9 @@
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#abroad">留学</a>
                 </li>
                 <li class="headmenu">
                     <a href="#greeting">代表挨拶</a>
@@ -134,7 +137,7 @@
                         </div>
                         <div class="classdiv2">
                             <h3>中学生クラス</h3>
-                            <p>中学生クラスでは１年生から高校受験に向けた指導を行なっています。1年生の早いうちから受験を意識して学習に取り組んでもらうことで目標に向かって突き進む力を養っていきます。また、勉強への取り組み方だけでなく、みんなの前に出て生徒自らが説明することで理解を深めると同時に人に伝える力を養っていきます。高校受験を通過点として生徒たちにとって必要な<span>マインド</span>を伝えていきます。</p>
+                            <p>中学生クラスでは1年生から高校受験に向けた指導を行なっています。1年生の早いうちから受験を意識して学習に取り組んでもらうことで目標に向かって突き進む力を養っていきます。また、勉強への取り組み方だけでなく、みんなの前に出て生徒自らが説明することで理解を深めると同時に人に伝える力を養っていきます。高校受験を通過点として生徒たちにとって必要な<span>マインド</span>を伝えていきます。</p>
                         </div>
                     </div>
                     <p class="link">中学生ページはこちらから</p>
@@ -167,8 +170,23 @@
                     社会人は3段で教育部の指導者の免状が授与されます。</p>
             </div>
         </section>
-        <section id="greeting">
-            <h2>代表挨拶</h2>
+        <section class="abroad">
+            <h2 id="abroad">留学サポート</h2>
+            <div>
+                <div>
+                    <p>○留学Office LAU(ニュージーランド)</p>
+                    <p>○ワイエー留学 (オーストラリア)</p>
+                    <p>○グローバル・クリエイティヴ・カナダ</p>
+                </div>
+                <div>
+                    <p>代表 勝彰子</p>
+                    <p>代表 渥味涼子</p>
+                    <p>代表 久野浩司</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2 id="greeting">代表挨拶</h2>
             <div class="greeting">
                 <div>
                     <img src="photo/teacher.JPG" alt="教室長">
