--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -22,7 +22,10 @@
                     <a href="/index.html" class="cantitle">ホーム</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="#achievement">資格</a>
+                            <a href="/index.html">TOP</a>
+                        </li>
+                        <li class="headmenu">
+                            <a href="/index.html#abroad">留学</a>
                         </li>
                         <li class="headmenu">
                             <a href="/index.html#greeting">代表挨拶</a>
@@ -45,6 +48,9 @@
                 </li>
                 <li class="headmenu">
                     <a href="#reputation">授業風景</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
                     <a href="#contact">お問い合わせ</a>
