--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -22,7 +22,10 @@
                     <a href="/index.html" class="cantitle">ホーム</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="#achievement">資格</a>
+                            <a href="/index.html">TOP</a>
+                        </li>
+                        <li class="headmenu">
+                            <a href="/index.html#abroad">留学</a>
                         </li>
                         <li class="headmenu">
                             <a href="/index.html#greeting">代表挨拶</a>
@@ -44,7 +47,10 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="#reputation">授業風景</a>
+                </li>
+                <li class="headmenu">
+                    <a href="#achievement">資格</a>
                 </li>
                 <li class="headmenu">
                     <a href="#contact">お問い合わせ</a>
@@ -77,7 +83,7 @@
                         <a href="/chugaku/chugaku.html">中学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#reputation">授業風景</a>
+                        <a href="#reputation">授業風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
@@ -108,6 +114,10 @@
                 <h3>○一般部(高校生以上)</h3>
                 <p>1年4回の検定試験と年1回の書道展に参加しています。教育部を指導出来るくらいのレベルまでを目標としてもらい腕をあげていきます。楷書、行書、草書、隷書、篆書、般若心経など様々な書体を書けるようにそして自分の作品作りを楽しまめるよう指導しています。</p>
             </div>
+        </section>
+        <section class="scenery">
+            <h2 id="reputation">授業風景</h2>
+            <img src="/photo/shogaku1.JPG" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
@@ -171,7 +181,7 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html#reputation">授業風景</a>
+                    <a href="#reputation">授業風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
