授業風景追加

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -123,7 +123,11 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
-            <img src="/photo/shogaku1.JPG" alt="lesson">
+            <img src="/photo/chugaku1.jpeg" alt="lesson">
+            <img src="/photo/chugaku2.jpg" alt="lesson">
+            <img src="/photo/chugaku3.jpg" alt="lesson">
+            <img src="/photo/chugaku4.jpg" alt="lesson">
+            <img src="/photo/chugaku5.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
