--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -117,7 +117,13 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
-            <img src="/photo/shogaku1.JPG" alt="lesson">
+            <img src="/photo/shodo.jpg" alt="lesson">
+            <img src="/photo/shodo1.jpg" alt="lesson">
+            <img src="/photo/shodo2.jpg" alt="lesson">
+            <img src="/photo/shodo3.jpg" alt="lesson">
+            <img src="/photo/shodo4.jpg" alt="lesson">
+            <img src="/photo/shodo5.jpg" alt="lesson">
+            <img src="/photo/shodo6.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
