--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -121,7 +121,42 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
-            <img src="/photo/shogaku1.JPG" alt="lesson">
+            <img src="/photo/shogaku1.jpg" alt="lesson">
+            <img src="/photo/shogaku2.jpg" alt="lesson">
+            <img src="/photo/shogaku3.jpg" alt="lesson">
+            <img src="/photo/shogaku4.jpg" alt="lesson">
+            <img src="/photo/shogaku5.jpg" alt="lesson">
+            <img src="/photo/shogaku6.jpg" alt="lesson">
+            <img src="/photo/shogaku7.jpg" alt="lesson">
+            <img src="/photo/shogaku8.jpg" alt="lesson">
+            <img src="/photo/shogaku9.jpg" alt="lesson">
+            <img src="/photo/shogaku10.jpg" alt="lesson">
+            <img src="/photo/shogaku11.jpg" alt="lesson">
+            <img src="/photo/shogaku12.jpg" alt="lesson">
+            <img src="/photo/shogaku13.jpg" alt="lesson">
+            <img src="/photo/shogaku14.jpg" alt="lesson">
+            <img src="/photo/shogaku15.jpg" alt="lesson">
+            <img src="/photo/shogaku16.jpg" alt="lesson">
+            <img src="/photo/shogaku17.jpg" alt="lesson">
+            <img src="/photo/shogaku18.jpg" alt="lesson">
+            <img src="/photo/shogaku19.jpg" alt="lesson">
+            <img src="/photo/shogaku20.jpg" alt="lesson">
+            <img src="/photo/shogaku21.jpg" alt="lesson">
+            <img src="/photo/shogaku22.jpg" alt="lesson">
+            <img src="/photo/shogaku23.jpg" alt="lesson">
+            <img src="/photo/shogaku24.jpg" alt="lesson">
+            <img src="/photo/shogaku25.jpg" alt="lesson">
+            <img src="/photo/shogaku26.jpg" alt="lesson">
+            <img src="/photo/shogaku27.jpg" alt="lesson">
+            <img src="/photo/shogaku28.jpg" alt="lesson">
+            <img src="/photo/shogaku29.jpg" alt="lesson">
+            <img src="/photo/shogaku30.jpg" alt="lesson">
+            <img src="/photo/shogaku31.jpg" alt="lesson">
+            <img src="/photo/shogaku32.jpg" alt="lesson">
+            <img src="/photo/shogaku33.jpg" alt="lesson">
+            <img src="/photo/shogaku34.jpg" alt="lesson">
+            <img src="/photo/shogaku35.jpg" alt="lesson">
+            <img src="/photo/shogaku36.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
